// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries node with fragment 1`] = `
Object {
  "data": Object {
    "node": Object {
      "name": "John Snow",
    },
  },
}
`;

exports[`queries node with inline fragment 1`] = `
Object {
  "data": Object {
    "node": Object {
      "name": "John Snow",
    },
  },
}
`;

exports[`querying connection edge node fields 1`] = `
Object {
  "data": Object {
    "people": Object {
      "edges": Array [
        Object {
          "node": Object {
            "name": "Catherine Harrison",
          },
        },
        Object {
          "node": Object {
            "name": "Bobby Whitman",
          },
        },
        Object {
          "node": Object {
            "name": "Aaron Whitman",
          },
        },
      ],
    },
  },
}
`;
